# SmartWatch

./: README.md
SmartWatch/: CMakeLists.txt  curl_test.ps1  sdkconfig  sdkconfig.old
SmartWatch/components/: readme.txt
SmartWatch/components/esp-wifi-connect-main/: dns_server.cc  wifi_configuration_ap.cc  wifi_station.cc
SmartWatch/components/esp-wifi-connect-main/include/: dns_server.h  wifi_configuration_ap.h  wifi_station.h
SmartWatch/components/esp_hid/include/: esp_hidd.h
SmartWatch/components/esp_hid/private/: ble_hidd.h
SmartWatch/components/esp_hid/src/: esp_hidd.c  nimble_hidd.c
SmartWatch/components/esp_littlefs-master/: CMakeLists.txt
SmartWatch/components/esp_littlefs-master/include/: esp_littlefs.h
SmartWatch/components/esp_littlefs-master/src/: esp_littlefs.c
SmartWatch/components/lvgl/env_support/cmake/: esp.cmake
SmartWatch/components/lvgl/src/libs/thorvg/: tvgInitializer.cpp
SmartWatch/components/mooncake/: .clang-format  library.json
SmartWatch/images/: JpegMaterialsDesc.txt
SmartWatch/main/: CMakeLists.txt  main.cpp
SmartWatch/main/apl/: apl.cpp  apl.hpp
SmartWatch/main/apl/AppStore/: AppStore.cpp  AppStore.hpp
SmartWatch/main/apl/Assistant/: Assistant.cpp  Assistant.hpp
SmartWatch/main/apl/GamePad/: GamePad.cpp  GamePad.hpp
SmartWatch/main/apl/Painter/: Painter.cpp  Painter.hpp
SmartWatch/main/apl/Setting/: Setting.cpp  Setting.hpp
SmartWatch/main/apl/WatchDial/: WatchDial.cpp  WatchDial.hpp
SmartWatch/main/bll/: bll.hpp
SmartWatch/main/bll/ArtificialIntelligence/: ArtificialIntelligence.cpp  ArtificialIntelligence.hpp
SmartWatch/main/bll/LvglFont/: lv_font_ArchitectsDaughter_25.c  lv_font_ArchitectsDaughter_50.c
SmartWatch/main/bll/LvglImg/: _GamePad_BG_RGB565_240x280.c  _Setting_BG_RGB565_240x280.c  _assistant_bg_RGB565_240x280.c  _assistant_icon_RGB565_40x40.c  _gamepad_icon_RGB565_40x40.c  _painter_bg_RGB565_240x280.c  _painter_icon_RGB565_40x40.c
SmartWatch/main/fml/: fml.hpp
SmartWatch/main/fml/BigModel/: BigModel.cpp  BigModel.hpp
SmartWatch/main/fml/HdlManager/: HdlManager.cpp  HdlManager.hpp
SmartWatch/main/fml/JpegDecoder/: JpegDecoder.cpp  JpegDecoder.hpp
SmartWatch/main/fml/SpeechRecongnition/: SpeechRecongnition.cpp  SpeechRecongnition.hpp
SmartWatch/main/fml/TextToSpeech/: TextToSpeech.cpp  TextToSpeech.hpp
SmartWatch/main/hdl/: hdl.hpp  hdl_config.hpp
SmartWatch/main/hdl/audio/: audio.hpp
SmartWatch/main/hdl/bt/: ble_store_config.h  bt.hpp
SmartWatch/main/hdl/button/: button.hpp
SmartWatch/main/hdl/disp/: disp.hpp
SmartWatch/main/hdl/flash/: flash.hpp
SmartWatch/main/hdl/imu/: imu.hpp
SmartWatch/main/hdl/lvgl/: lvgl.hpp
SmartWatch/main/hdl/power/: power.hpp
SmartWatch/main/hdl/wifi/: wifi.hpp
SmartWatch/partition_table/: CMakeLists.txt  partitions.csv
SmartWatch/process_jpg_materials/: FixJpgSorting.ps1  OffsetRename.ps1  RenameJpgFiles.ps1  readme.txt
